<resources>
    <string name="app_name">Курьер v2</string>

    <string name="text_font">sans-serif-medium</string>
    <string name="login_placeholder">Логин</string>
    <string name="password_placeholder">Пароль</string>
    <string name="remember_password">Запомнить пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="task_list_hint_text">Ниже приведён список активных заданий. Нажмите на задание чтобы просмотреть подробности. Отметьте справа те задания, которые начинаете выполнять и нажмите кнопку "Начать выполнение".</string>
    <string name="address_list_hint_text">Ниже приведён список адресов и доставляемых по ним заданий. Нажмите на иконку справа от адреса чтобы посмотреть адрес на карте. Нажмите на задание для заполнения отчёта о доставке.</string>
    <string name="start_tasks">Начать выполнение</string>
    <string name="sort_standart_button">Стандартная</string>
    <string name="sort_alphabetic_button">По алфавиту</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edition_label">Издание:\ </string>
    <string name="dates_label">Даты:\ </string>
    <string name="brigade_label">Бригада:\ </string>
    <string name="area_label">Уч.:\ </string>
    <string name="city_label">Нас/п.:\ </string>
    <string name="remain_label">Остаток:\ </string>
    <string name="pack_count_label">Пачек:\ </string>
    <string name="prints_count_label">Тираж:\ </string>
    <string name="storage_label">Склад:\ </string>
    <string name="show_map_button_text">Посмотреть карту</string>
    <string name="examine_button_text">Я ознакомился</string>
    <string name="user_explanation_hint">Ваше примечание</string>
    <string name="make_photo_button">СДЕЛАТЬ ФОТО</string>
    <string name="close_address_button">Закрыть дом</string>
    <string name="rejection">Отказ</string>
    <string name="pile">Стопка</string>
    <string name="watch">Вахта</string>
    <string name="euro">Евро</string>
    <string name="app_version_label">Версия: %d</string>
    <string name="show_task_on_map">Показать на карте</string>
    <string name="pause">Пауза</string>
    <string name="unknown_network_error">Ошибка соединения с интернетом</string>
    <string name="unknown_runtime_error">Неизвестная ошибка</string>
    <string name="menu_title">Меню</string>
    <string name="menu_tasks">Задачи</string>
    <string name="menu_logout">Выйти</string>
    <string name="login_no_network">Нет ответа от сервера</string>
    <string name="ok">Ок</string>
    <string name="login_offline">Войти оффлайн</string>
    <string name="login_offline_error">Невозможно войти оффлайн. Необходима авторизация через сервер.</string>
    <string name="menu_info">Отправить crash.log</string>
    <string name="menu_uuid">Скопировать UUID</string>
    <string name="crash_log_not_found">crash.log отсутствует</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="send">Отправить</string>
    <string name="update_new_available">Доступно новое обновление</string>
    <string name="update_install">Установить</string>
    <string name="update_later">Напомнить позже</string>
    <string name="update_install_error">Не удалось загрузить файл обновления</string>
    <string name="update_progress">Загрузка %d/100</string>
    <string name="update_cant_get_info">Не удалось получить информацию об обновлениях</string>
    <string name="login_need_update">Необходимо обновить приложение</string>
    <string name="login_need_network">Необходимо включить передачу данных</string>
    <string name="network_request_enable">Небходимо включить передачу данных</string>
    <string name="sim_required_error">Небходимо вставить сим-карту</string>
    <string name="time_request_valid">Неверные настройки времени</string>
    <string name="settings">Настройки</string>
    <string name="xiaomi_permissions_request">Необходимо дать доступ к \"Экран блокировки\", \"Всплывающие окна\" и \"Отображать всплывающие окна, когда запущено в фоновом режиме\"</string>
    <string name="request_permissions_rationale">Необходимо дать разрешения:\n%s</string>
    <string name="tasks_title">Список заданий</string>
    <string name="task_list_not_examined">Вы должны ознакомиться с заданием</string>
    <string name="task_list_not_started">Дата начала распространения не наступила</string>
    <string name="task_list_tasks_updated">Задания были обновлены</string>
    <string name="task_list_tasks_created">Обновление прошло успешно</string>
    <string name="task_list_tasks_not_changed">Нет новых заданий</string>
    <string name="task_list_update_in_progress">Обновление в процессе</string>
    <string name="addresses_title">Список адресов</string>
    <string name="address_unknown">Неизвестный адрес</string>
    <string name="task_details_title">Детали задания</string>
    <string name="task_details_photos_required">Необходимы фотографии</string>
    <string name="task_details_column_1">П/уч.</string>
    <string name="task_details_column_2">Адрес</string>
    <string name="task_details_column_3">Тираж</string>
    <string name="task_details_column_4">Прим.</string>
    <string name="task_details_date_rande">%s - %s</string>
    <string name="task_details_publisher">%s #%d</string>
    <string name="task_details_address_bypass">%d    %d</string>
    <string name="fatal_error_title">Произошла непредвиденная ошибка\nКод ошибки: %s</string>
    <string name="image_map_not_found">Файл карты не найден</string>
    <string name="image_map_or_production_not_found">Файл карты или продукции не найден</string>
    <string name="menu_pause">Пауза</string>
    <string name="pause_lunch">Обед</string>
    <string name="pause_load">Дозагрузка</string>
    <string name="pause_cancel">Отмена</string>
    <string name="error_pause_unavailable">Пауза недоступна</string>
    <string name="pause_already_paused">Пауза уже запущена</string>
    <string name="report_close_location_null_error">Не определились координаты отправь крэш лог! \nKoordinatalari aniqlanmadi, xato jurnalini yuborish!</string>
    <string name="report_close_location_far_error">Ты не у дома! Подойди и попробуй еще \nSiz uyning yonida emassiz! Yaqinlashing va qaytadan urining</string>
    <string name="report_close_location_null_warning">Не определились координаты. \nKoordinatalar yo\'q</string>
    <string name="report_close_location_far_warning">Ты не у дома. \nSiz uyda emassiz</string>
    <string name="report_close_paused_warning">Пауза будет прервана</string>
    <string name="cancel">Отмена</string>
    <string name="report_close_no_photos">Необходимо сделать фотографии</string>
    <string name="report_close_ask">КНОПКИ НАЖАЛ?\nОТЧЁТ ОТПРАВЛЯЮ?\n(tugmachalari bosildi? hisobot yuboringmi?)</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="report_gps_loading">Устанавливается связь со спутниками GPS</string>
    <string name="unknown_runtime_error_code">Неизвестная ошибка (code: %s)</string>
    <string name="share_device_uuid_subject">Мой ID:</string>
    <string name="share_device_uuid_title">Отправить ID устройства</string>
    <string name="yandex_map_title">Карта</string>
    <string name="addresses_more">Ещё %d адресов</string>
    <string name="report_service_query_size">Сервис. В очереди: %d. </string>
    <string name="report_service_network_disabled">Сеть недоступна.</string>
    <string name="task_update_required">Необходимо обновить список заданий</string>
    <string name="later">Позже</string>
    <string name="menu_bottom_info">"Версия: %d | Пользователь: %s "</string>
    <string name="reject_address_button">Отказ</string>
    <string name="mocked_location_disable_request">Обнаружена подмена координат. Необходимо отключить, удалить все приложения с данным функционалом и перезапустить приложение</string>
    <string name="task_list_district_different">Сцепка этих заданий запрещена</string>
    <string name="report_close_with_unfinished_item_warning">&lt;b>Аввалги домни ëпинг, ëки расмга олганингизни удалить килинг. Сунгра кейинги домни ëпишингиз мумкин.&lt;/b> Закрой дом или удали фото в задании %s по адресу: %s !!!"</string>
    <string name="btn_storage_check">Отметка на складе</string>
    <string name="storage_addresses_title">Адреса складов</string>
    <string name="confirm_storage">подтвердить склад</string>
    <string name="closure_date">%d. Склад подтверждён. Ombor tasdiqlandi.\n%s</string>
    <string name="storage_report_close_location_far_warning">Ты не у склада\nSiz omborda emassiz</string>
    <string name="storage_close_location_far_error">Ты не у склада! Подойди и попробуй еще \nSiz omborda emassiz! Yaqinlashing va qaytadan urining</string>
    <string name="unselected_tasks_warning">Внимание! Есть еще задания на этом складе.</string>
    <string name="storage_not_closed_error">Склад должен быть закрыт первым</string>
    <string name="storage_close_first_error">Начинаем со склада и фото продукции!</string>
    <string name="backup_info">Найдена резервная копия данных. Востановить?</string>
    <string name="error_restore">Не удалось восстановить данные</string>
    <string name="restore_succeeded">Данные успешно восстановлены</string>
    <string name="exteral_storage_permission_request">Необходимо дать разрешение приложению \"КурьерV2\" для управления всеми файлами</string>
    <string name="wrong_password_error">Неправильный пароль</string>
</resources>
