<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/hint_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginStart="8dp" />

    <TextView
        android:id="@+id/publisher_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@string/text_font"
        android:text="@string/edition_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/hint_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/publisher_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/publisher_label"
        app:layout_constraintTop_toTopOf="@+id/publisher_label"
        tools:text="Вечерняя Москва №4" />


    <TextView
        android:id="@+id/dates_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/dates_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/publisher_label"
        app:layout_constraintTop_toBottomOf="@id/publisher_text" />

    <TextView
        android:id="@+id/dates_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/publisher_text"
        app:layout_constraintTop_toTopOf="@+id/dates_label"
        tools:text="07.02.2018 - 11.02.2018" />

    <TextView
        android:id="@+id/brigade_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/brigade_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/publisher_label"
        app:layout_constraintTop_toBottomOf="@id/dates_text" />

    <TextView
        android:id="@+id/brigade_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@+id/publisher_text"
        app:layout_constraintTop_toTopOf="@+id/brigade_label"
        tools:text="3" />

    <TextView
        android:id="@+id/area_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/area_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/brigade_text"
        app:layout_constraintTop_toBottomOf="@id/dates_text" />

    <TextView
        android:id="@+id/area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/area_label"
        app:layout_constraintTop_toTopOf="@+id/area_label"
        tools:text="10" />

    <TextView
        android:id="@+id/city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/city_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/area_text"
        app:layout_constraintTop_toBottomOf="@id/dates_text" />

    <TextView
        android:id="@+id/city_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/city_label"
        app:layout_constraintTop_toTopOf="@+id/city_label"
        tools:text="Новый уренгой" />


    <TextView
        android:id="@+id/prints_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/prints_count_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/publisher_label"
        app:layout_constraintTop_toBottomOf="@id/city_text" />

    <TextView
        android:id="@+id/copies_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@+id/publisher_text"
        app:layout_constraintTop_toTopOf="@+id/prints_count_label"
        tools:text="2500" />

    <TextView
        android:id="@+id/pack_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/pack_count_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/copies_text"
        app:layout_constraintTop_toBottomOf="@id/city_text" />

    <TextView
        android:id="@+id/pack_count_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/pack_count_label"
        app:layout_constraintTop_toTopOf="@+id/pack_count_label"
        tools:text="10" />

    <TextView
        android:id="@+id/remain_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/remain_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pack_count_text"
        app:layout_constraintTop_toBottomOf="@id/city_text" />

    <TextView
        android:id="@+id/remain_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/remain_label"
        app:layout_constraintTop_toTopOf="@+id/remain_label"
        tools:text="0" />


    <TextView
        android:id="@+id/storage_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@string/text_font"
        android:text="@string/storage_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/publisher_label"
        app:layout_constraintTop_toBottomOf="@id/prints_count_label" />

    <TextView
        android:id="@+id/storage_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/publisher_text"
        app:layout_constraintTop_toTopOf="@+id/storage_label"
        tools:text="Москва, Южнобутовская ул., 68, под. 3 (в машину у подъезда).\nСветлана, 8-999-999-99-99" />

    <TextView
        android:id="@+id/need_photo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Необходимы фотографии"
        android:textColor="@color/colorFuchsia"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/storage_label"
        app:layout_constraintTop_toBottomOf="@id/storage_text" />
</android.support.constraint.ConstraintLayout>