<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/separator_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#AAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_column_1"
        android:layout_width="36dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/task_details_column_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_column_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/separator_line" />

    <TextView
        android:id="@+id/tv_column_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/task_details_column_2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_column_1"
        app:layout_constraintEnd_toStartOf="@+id/tv_column_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_column_1"
        app:layout_constraintTop_toTopOf="@+id/tv_column_1" />

    <TextView
        android:id="@+id/tv_column_3"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/task_details_column_3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_column_2"
        app:layout_constraintEnd_toStartOf="@+id/tv_column_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_column_2"
        app:layout_constraintTop_toTopOf="@+id/tv_column_2" />

    <TextView
        android:id="@+id/tv_column_4"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/task_details_column_4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_column_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_column_3"
        app:layout_constraintTop_toTopOf="@+id/tv_column_3" />
</androidx.constraintlayout.widget.ConstraintLayout>