<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/entrance_title"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/euro_select"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Подъезд 1" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:id="@+id/euro_select"
        android:layout_width="0dp"
        android:minWidth="48dp"
        android:layout_height="wrap_content"
        android:text="@string/euro"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/entrance_title"
        app:layout_constraintEnd_toStartOf="@+id/watch_select"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/entrance_title"
        app:layout_constraintTop_toTopOf="@+id/entrance_title" />

    <Button
        android:id="@+id/watch_select"
        android:layout_width="0dp"
        android:minWidth="58dp"
        android:layout_height="wrap_content"
        android:text="@string/watch"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/euro_select"
        app:layout_constraintEnd_toStartOf="@+id/pile_select"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/euro_select"
        app:layout_constraintTop_toTopOf="@+id/euro_select" />

    <Button
        android:id="@+id/pile_select"
        android:layout_width="0dp"
        android:minWidth="66dp"
        android:layout_height="wrap_content"
        android:text="@string/pile"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/watch_select"
        app:layout_constraintEnd_toStartOf="@+id/rejection_select"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/watch_select"
        app:layout_constraintTop_toTopOf="@+id/watch_select" />

    <Button
        android:id="@+id/rejection_select"
        android:layout_width="0dp"
        android:minWidth="62dp"
        android:layout_height="wrap_content"
        android:text="@string/rejection"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/pile_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pile_select"
        app:layout_constraintTop_toTopOf="@+id/pile_select" />
</android.support.constraint.ConstraintLayout>